--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:href": "ng build --base-href ./",
-    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "delete:docs": "del docs",
-    "copy:dist": "xcopy C:\\Users\\Moshitos\\Desktop\\Moshito\\Angular\\Portafolio-Web\\dist\\portafolio-web C:\\Users\\Moshitos\\Desktop\\Moshito\\Angular\\Portafolio-Web\\docs /E"
+    "deploy": "ng deploy --base-href=https://github.com/deeperunmade/Portafolio-web"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-cli-ghpages": "^1.0.7",
     "bootstrap": "^5.3.2",
     "del-cli": "^5.1.0",
     "rxjs": "~7.8.0",
